--- a/script/references.bib
+++ b/script/references.bib
@@ -1603,3 +1603,61 @@ type: article},
 	doi = {10.1016/j.giq.2019.101421},
 	note = {Publisher: Elsevier Ltd}
 }
+
+@article{twizeyimana2019,
+	title = {The public value of E-Government {\textendash} A literature review},
+	author = {Twizeyimana, Jean Damascene and Andersson, Annika},
+	year = {2019},
+	month = {04},
+	date = {2019-04-01},
+	journal = {Government Information Quarterly},
+	pages = {167--178},
+	volume = {36},
+	number = {2},
+	doi = {10.1016/j.giq.2019.01.001},
+	note = {Publisher: Elsevier Ltd}
+}
+
+@article{davis1989,
+	title = {Perceived Usefulness, Perceived Ease of Use, and User Acceptance of Information Technology},
+	author = {Davis, Fred D.},
+	year = {1989},
+	month = {09},
+	date = {1989-09},
+	journal = {MIS Quarterly},
+	pages = {319},
+	volume = {13},
+	number = {3},
+	doi = {10.2307/249008},
+	url = {https://www.jstor.org/stable/249008?origin=crossref}
+}
+
+@article{hung2006,
+	title = {Determinants of user acceptance of the e-Government services: The case of online tax filing and payment system},
+	author = {Hung, Shin-Yuan and Chang, Chia-Ming and Yu, Ting-Jing},
+	year = {2006},
+	month = {01},
+	date = {2006-01},
+	journal = {Government Information Quarterly},
+	pages = {97--122},
+	volume = {23},
+	number = {1},
+	doi = {10.1016/j.giq.2005.11.005},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X05000948},
+	langid = {en}
+}
+
+@article{oflynn2007,
+	title = {From New Public Management to Public Value: Paradigmatic Change and Managerial Implications},
+	author = {{O'Flynn}, Janine},
+	year = {2007},
+	month = {09},
+	date = {2007-09-01},
+	journal = {Australian Journal of Public Administration},
+	pages = {353--366},
+	volume = {66},
+	number = {3},
+	doi = {10.1111/J.1467-8500.2007.00545.X},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1467-8500.2007.00545.x},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
