--- a/script/references.bib
+++ b/script/references.bib
@@ -1661,3 +1661,91 @@ type: article},
 	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1467-8500.2007.00545.x},
 	note = {Publisher: John Wiley & Sons, Ltd}
 }
+
+@article{cordella2018,
+	title = {ICTs and value creation in public sector: Manufacturing logic vs service logic},
+	author = {Cordella, Antonio and Paletti, Andrea},
+	year = {2018},
+	date = {2018},
+	journal = {Information Polity},
+	pages = {125--141},
+	volume = {23},
+	number = {2},
+	doi = {10.3233/IP-170061},
+	url = {https://content.iospress.com/articles/information-polity/ip170061 files/4606/ip170061.html},
+	note = {Type: Journal Article}
+}
+
+@article{vargo2004,
+	title = {Evolving to a New Dominant Logic for Marketing},
+	author = {Vargo, Stephen L. and Lusch, Robert F.},
+	year = {2004},
+	month = {01},
+	date = {2004-01},
+	journal = {Journal of Marketing},
+	pages = {1--17},
+	volume = {68},
+	number = {1},
+	doi = {10.1509/jmkg.68.1.1.24036},
+	url = {http://journals.sagepub.com/doi/10.1509/jmkg.68.1.1.24036},
+	langid = {en}
+}
+
+@article{vargo2004a,
+	title = {Evolving to a New Dominant Logic for Marketing},
+	author = {Vargo, Stephen L. and Lusch, Robert F.},
+	year = {2004},
+	month = {01},
+	date = {2004-01},
+	journal = {Journal of Marketing},
+	pages = {1--17},
+	volume = {68},
+	number = {1},
+	doi = {10.1509/jmkg.68.1.1.24036},
+	url = {http://journals.sagepub.com/doi/10.1509/jmkg.68.1.1.24036},
+	langid = {en}
+}
+
+@article{barrett2015,
+	title = {Service innovation in the digital age},
+	author = {Barrett, Michael and Davidson, Elizabeth and Prabhu, Jaideep and Vargo, Stephen L.},
+	year = {2015},
+	month = {03},
+	date = {2015-03},
+	journal = {MIS Quarterly},
+	pages = {135--154},
+	volume = {39},
+	number = {1},
+	doi = {10.25300/MISQ/2015/39:1.03},
+	url = {https://dl.acm.org/doi/abs/10.25300/MISQ/2015/39%3A1.03},
+	note = {Publisher: Society for Information Management and The Management Information Systems Research Center PUB1567 Minneapolis, MN, USA}
+}
+
+@article{osborne2017,
+	title = {From public service-dominant logic to public service logic: are public service organizations capable of co-production and value co-creation?},
+	author = {Osborne, Stephen P.},
+	year = {2017},
+	month = {02},
+	date = {2017-02},
+	journal = {Public Management Review},
+	pages = {225--231},
+	volume = {20},
+	number = {2},
+	doi = {10.1080/14719037.2017.1350461},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/14719037.2017.1350461},
+	note = {Publisher: Routledge}
+}
+
+@article{bannister2015b,
+	title = {The great theory hunt: Does e-government really have a problem?},
+	author = {Bannister, Frank and Connolly, Regina},
+	year = {2015},
+	month = {01},
+	date = {2015-01},
+	journal = {Government Information Quarterly},
+	pages = {1--11},
+	volume = {32},
+	number = {1},
+	doi = {10.1016/J.GIQ.2014.10.003},
+	note = {Publisher: JAI}
+}
